<resources>

    // Application parameters
    <string name="app_name">DormApp</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="first_info_text">Some first info text</string>
    <string name="admin">Admin</string>
    <string name="administrator">Administrator</string>
    <string name="student">Student</string>
    <string name="bottom_text">This is a test Application</string>
    <string name="surname">Surname</string>

    <string name="admin_dialog_title">Enter key to continue</string>
    <string name="key">Key</string>

    <string name="admin_key">admin</string>


    <string name="ok">Okay</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="patronymic">Patronymic</string>


    <string name="database_error">Database error</string>
    <string name="error">Error</string>
    <string name="record_added">Record added</string>

    <string name="connection_failed">Connection failed</string>
    <string name="user_not_found">User not found</string>
    <string name="key_not_valid">Key is not valid</string>
    <string name="user_saved">User was saved</string>
    <string name="verified">verified</string>
    <string name="not_verified">Failed to login</string>
    <string name="not_verified_title">Not verified</string>

    <string name="not_encrypted">not encrypted</string>
    <string name="date_not_correct">data isn\'t correct</string>
    <string name="cannot_be_empty">The field cannot be empty</string>
    <string name="student_confirmed">The student has been confirmed</string>
    <string name="student_not_confirmed">The student has not been confirmed</string>
    <string name="attention">Attention</string>

    <string name="empty">Empty</string>
    <string name="not_registered">Not registered</string>
    <string name="undefined_type">Undefined type</string>

    <string name="to_confirm_reg_dialog">
        Are you sure you want to confirm registration of %s?
    </string>

    <string name="to_cancel_reg_dialog">
        Are you sure you want to cancel registration of %s?
    </string>

    <string name="typecast_error">Typecast error</string>
    <string name="password_is_short">Password is too short</string>
    <string name="fields_must_be_filled">All fields must be filled</string>
    <string name="password_encrypt_error">Password encrypt error</string>
    <string name="user_added_for_registration">User added for registration</string>
    <string name="registration_info_title">Registration information</string>

    <string name="news_not_found">News not found</string>

    <string name="registration_info">
        Your account has been added to the list of students that will be checked by the dormitory director.
    </string>

    <string name="confirm_reg_title">You cannot change it.</string>
    <string name="confirm_reg_info">Are you sure that you entered the correct information?</string>

    <string name="not_verified_info">
        Your account has not yet been verified. Please wait a moment.
    </string>

    <string name="not_verified_deleted">
        Your account has not been verified by an administrator.
        Please check your data and submit your request again.\n\n
        <b>This message will not be shown again!</b>
    </string>

    <string name="failed_user_data">
        Failed to get user data. Try later!
    </string>

    <string name="student_info_format">
        <b>Surname:</b> %s;\n
        <b>Name:</b> %s;\n
        <b>Patronymic:</b> %s;\n
        <b>Pass number:</b> %s;\n
        <b>Room:</b> %s;
    </string>

    <string name="invalidate">Invalidate</string>
    <string name="validate">Validate</string>
    <string name="close">Close</string>
    <string name="student_info">Student information</string>

    <string name="pass_number">Pass</string>
    <string name="room_number">Room</string>
    <string name="password">Password</string>
    <string name="title">Title</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="time_type">Time type</string>
    <string name="work">Work</string>
    <string name="save">Save</string>
    <string name="custom">Custom</string>
    <string name="edited">Edited</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="record_not_found">Record not found</string>
    <string name="respond">Respond</string>
    <string name="show_list">Show list of rejected students</string>
    <string name="already_registered">Already registered</string>
    <string name="added">Added</string>
    <string name="pay">Pay</string>
    <string name="students">Students</string>
    <string name="register_account">Register new account</string>

    <string name="want_remove">Do you really want to remove that item?</string>


    // Student menu
    <string name="account">Account</string>
    <string name="news">News</string>

    // Admin menu
    <string name="add">Add</string>

    // Content description
    <string name="student_image">student image</string>
    <string name="news_icon_image">news icon image</string>
    <string name="student_icon_image">student icon image</string>
    <string name="image_button_edit">image button edit</string>
    <string name="image_open_spinner">image open spinner</string>
    <string name="user_confirmed">User has been confirmed</string>
    <string name="user_canceled">User has been deleted</string>
    <string name="hello_image">hello image description</string>


    <string-array name="time_types">
        <item>Hours</item>
        <item>Minutes</item>
    </string-array>

    <string-array name="hours">
        <item>Custom</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string name="disabled">Disabled</string>
    <string name="website">Website</string>
    <string name="website_long_v">Website of application</string>
    <string name="enter_personal_information">Enter personal information:</string>
    <string name="account_info">Enter information to find out who you are:</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="main_hello_question">Who you are?</string>

</resources>