<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/ic_baseline_arrow_left" />

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="172dp"
            android:layout_height="172dp"
            android:layout_marginTop="70dp"
            android:elevation="10dp"
            android:background="@drawable/background_round_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgBackground"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/background_light_blue_gradient"
            android:scaleType="centerCrop"
            android:elevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTitle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgIcon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="6dp"
                android:hint="@string/title" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardWork"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="36dp"
            app:cardElevation="2dp"
            app:layout_constraintBottom_toTopOf="@id/tilTime"
            app:layout_constraintEnd_toStartOf="@id/cardNews"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilTitle"
            app:layout_constraintVertical_bias="0.1"
            app:strokeColor="@color/blue_500"
            app:strokeWidth="2dp">

            <ImageView
                android:id="@+id/imgWork"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardNews"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="36dp"
            app:cardElevation="2dp"
            app:layout_constraintBottom_toTopOf="@id/tilTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardWork"
            app:layout_constraintTop_toBottomOf="@id/tilTitle"
            app:layout_constraintVertical_bias="0.1"
            app:strokeWidth="2dp">

            <ImageView
                android:id="@+id/imgNews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTime"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@id/tilTimeType"
            app:layout_constraintHorizontal_weight="7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardWork">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="6dp"
                android:hint="@string/time"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTimeType"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="5"
            app:layout_constraintStart_toEndOf="@id/tilTime"
            app:layout_constraintTop_toBottomOf="@id/cardWork">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTimeType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="6dp"
                android:inputType="numberDecimal"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/timeTypeSpinner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="@id/tilTimeType"
            app:layout_constraintEnd_toEndOf="@id/tilTimeType"
            app:layout_constraintStart_toStartOf="@id/tilTimeType"
            app:layout_constraintTop_toTopOf="@id/tilTimeType"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilTime">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="6dp"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:minLines="2" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:text="@string/save"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilDescription"
            app:layout_constraintVertical_bias="0.2" />

        <Spinner
            android:id="@+id/hoursSpinner"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@id/tilTime"
            app:layout_constraintEnd_toEndOf="@id/tilTime"
            app:layout_constraintTop_toTopOf="@id/tilTime"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/myBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OUT"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>